--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     desc,
     digest,
     evaluate,
+    fansi,
     highlight,
     httr,
     jsonlite,
@@ -39,6 +40,7 @@ Imports:
     tibble,
     tools,
     whisker,
+    withr,
     yaml,
     xml2 (>= 1.1.1),
     fs (>= 1.2.0)
