add patch for deploy_local for gh actions from @jimhester fork

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,4 +139,5 @@ import(rlang)
 importFrom(MASS,addterm)
 importFrom(magrittr,"%>%")
 importFrom(memoise,memoise)
+importFrom(utils,head)
 importFrom(utils,installed.packages)
