--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Imports:
     tools,
     whisker,
     withr,
+    utils,
     xml2 (>= 1.1.1),
     yaml
 Suggests: 
@@ -57,6 +58,6 @@ Suggests:
     rsconnect
 VignetteBuilder: knitr
 SystemRequirements: pandoc
-RoxygenNote: 7.0.0
+RoxygenNote: 7.0.1
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
